1.添加 dingo/api 2.修改用户的模型 3.理解使用 转换器 4.创建邮件模板（注册验证码，忘记密码，重置密码） 5.添加允许跨域的中间件 （\Barryvdh\Cors\HandleCors） 6.添加邮件验证码模型
